Fixed mobile overflow but not desktop

--- a/white/css/style.css
+++ b/white/css/style.css
@@ -95,7 +95,7 @@ padding-bottom: 3px;
 .slider {
 background-color: #BDBEBF;
 display: block;
-height: 550px
+height: 750px
 
 }
 
@@ -105,8 +105,7 @@ font-size: 36px;
 letter-spacing: 4px;
 color:#ffffff;
 text-align: center;
-margin-left: 700px;
-margin-top: 100px;
+margin-top: 100px;*/
 }
 
 .slidersubheadline {
